tests/rosetta/out/Go/binary-search.error
type: error[T008]: type mismatch: expected int, got float
  --> tests/rosetta/x/Mochi/binary-search.mochi:28:10

 28 |   return mid
    |          ^

help:
  Change the value to match the expected type.